--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ bench_ios_packages.xcworkspace/xcuserdata/gwh.xcuserdatad/UserInterfaceState.xcu
 bench_ios_packages.xcworkspace/xcuserdata/gwh.xcuserdatad/UserInterfaceState.xcuserstate
 bench_ios_packages.xcworkspace/xcuserdata/gwh.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
+*.xcuserstate
+bench_ios_packages.xcworkspace/xcuserdata/gwh.xcuserdatad/UserInterfaceState.xcuserstate
