--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ bench_ios_packages.xcworkspace/xcuserdata/gwh.xcuserdatad/UserInterfaceState.xcu
 *.xcuserstate
 *.xcuserstate
 bench_ios_packages.xcworkspace/xcuserdata/gwh.xcuserdatad/UserInterfaceState.xcuserstate
+bench_ios_packages.xcworkspace/xcuserdata/gwh.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
